<resources>
    <string name="app_name">TaskBoard</string>
    <string name="action_settings">Settings</string>
    <string name="addtask">Add Task</string>
    <string name="todo">To Do</string>
    <string name="points">Points</string>
    <string name="submit">Submit</string>
    <string name="instruction">Drag the slider to set points for this task</string>
    <string name="notask">You have no tasks. Tap on the button to add one</string>
    <string name="nextmilestone">Next Milestone:</string>
    <string name="totalpoints">Total Points</string>
    <string name="addMilestone">You do not have any milestones. Click here to add one</string>
    <string name="title_activity_milestones">MilestonesActivity</string>
    <string name="enter_points">Enter points needed to reach the milestone</string>
    <string name="enterreward">Enter a Reward</string>
    <string name="addMilestoneactivitylabel">Add Milestone</string>
    <string name="letsdothis">Lets do this</string>
    <string name="pointsneeded">Points Needed:</string>
    <string name="reward">Reward:</string>
    <string name="completed">Completed</string>
    <string name="pointsreached">You have reached</string>
    <string name="pointsLowercase">points</string>
    <string name="rewardearned">Your reward:</string>
    <string name="milestones">Milestones</string>
    <string name="milestonereached">Milestone Reached</string>
    <string name="pointsneedederror">This field cannot be empty</string>
    <string name="rewardneeedederror">Please enter a reward</string>
    <string name="taskneedederror">Enter a task description</string>
    <string name="admobappid">ca-app-pub-9540086841520699~7479585337</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="resetprogress">Reset All progress</string>
    <string name="reset">Reset all progress</string>
    <string name="resetall">Reset all data?(Not reversible)</string>
    <string name="nomilestones">You have no milestones. Are you even trying?</string>
    <string name="nocompleted">You have not completed any tasks. Start working Now!!</string>
    <string name="deletetask">Delete Task</string>
    <string name="addTaskIns">Click on this button to add new tasks</string>
    <string name="swipeIns">Swipe away a task when its done. Tap on a task to edit it</string>
    <string name="cardIns">The card on top will view the next milestone. Tap on it to add new ones</string>
    <string name="archins">Tap on this icon to view completed tasks</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="skip">Skip</string>
</resources>

